# vision-basics

./: .gitignore  README.md
calculations/: angle-focal  depth-focal
java/: README.md
jetson/: .tracksend.cpp.swp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  track_and_send.cpp  tracksend  tracksend.cpp
testing_grounds/: cleanup
testing_grounds/filewriting/: .filewriter.cpp.swp  CMakeLists.txt
testing_grounds/multithreading/: CMakeLists.txt  counting_slave.cpp  master_template.cpp  talking_slave.cpp
testing_grounds/start_stop_msging/jetson_sim/: .jetson_sim.cpp.swp  .zhelpers.hpp.swp  CMakeLists.txt  jetson_sim  jetson_sim.cpp  msgcontrol.cpp
testing_grounds/start_stop_msging/roborio_sim/: .roborio_sim.cpp.swp  roborio_sim  roborio_sim.cpp
testing_grounds/videowriting/: CMakeLists.txt  videowriting  videowriting.cpp
tutorials/: README.md  boundbox.cpp  canny.cpp  convex.cpp  histocomp  histoeq.cpp  hough.cpp  houghcirc.cpp  imgpyr.cpp  laplacian.cpp  myolf.cpp  remapping.cpp  smoothing.cpp  sobel.cpp
